<resources>
    <string name="app_name">WIG_no_AWARE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="action_settings">Settings</string>
    <string name="여행선호도설문">여행선호도설문</string>
    <string name="회원정보">회원정보</string>
    <string name="수정">수정</string>
    <string name="다시하기">다시하기</string>
    <string name="아이디">아이디</string>
    <string name="비밀번호">비밀번호</string>
    <string name="다시하시">설문조사를 다시 하시겠습니까?</string>
    <string name="id">id</string>
    <string name="password">**********</string>
    <string name="newpw">새로운 비밀번호</string>
    <string name="저장">저장</string>
</resources>
